[gd_scene load_steps=24 format=3 uid="uid://bbj3hk8ikg7kg"]

[ext_resource type="Script" uid="uid://cbja4pudfr4bh" path="res://scripts/level_controller.gd" id="1_j14br"]
[ext_resource type="PackedScene" uid="uid://ddu00bxi35taq" path="res://scenes/misc/end.tscn" id="2_0y7y4"]
[ext_resource type="PackedScene" uid="uid://fwxgxoldgh70" path="res://scenes/misc/start.tscn" id="3_gruok"]
[ext_resource type="PackedScene" uid="uid://c4ru1ecd16jse" path="res://scenes/misc/board_space.tscn" id="4_h717f"]
[ext_resource type="PackedScene" uid="uid://drov7tf4sps1t" path="res://scenes/pieces/immobile_t_piece.tscn" id="5_0y7y4"]
[ext_resource type="PackedScene" uid="uid://b0e6p2sm7c4va" path="res://scenes/misc/piece_spawner.tscn" id="5_l8eod"]
[ext_resource type="Texture2D" uid="uid://svsgny3vj31m" path="res://assets/boards/CircuitCorner.png" id="5_sfnul"]
[ext_resource type="Texture2D" uid="uid://iixbcfy6itxx" path="res://assets/boards/CircuitEdge.png" id="6_fea5r"]
[ext_resource type="PackedScene" uid="uid://d2y6uucg4fxdw" path="res://scenes/pieces/side_objective.tscn" id="6_gruok"]
[ext_resource type="PackedScene" uid="uid://ddex43fkd7u5d" path="res://scenes/pieces/turn.tscn" id="6_sfnul"]
[ext_resource type="Texture2D" uid="uid://be5wgnhw3pr2s" path="res://assets/TurnPipe.png" id="7_fea5r"]
[ext_resource type="Texture2D" uid="uid://cij6bflbxu7rj" path="res://assets/boards/CircuitPipe.png" id="7_sfnul"]
[ext_resource type="PackedScene" uid="uid://bbkl7mhkbvsn7" path="res://scenes/pieces/t_piece.tscn" id="8_vm1kt"]
[ext_resource type="Texture2D" uid="uid://cwd71jjc53u3p" path="res://assets/TPipe.png" id="9_wnnhf"]
[ext_resource type="PackedScene" uid="uid://dayysnfdinqpt" path="res://scenes/pieces/cross.tscn" id="10_ahsud"]
[ext_resource type="Texture2D" uid="uid://cwkh8uxg6nsrt" path="res://assets/CrossPipe.png" id="11_iu1q5"]
[ext_resource type="FontFile" uid="uid://cfdsh57g6n2p4" path="res://assets/fonts/Nobile-Regular.ttf" id="12_orjhg"]
[ext_resource type="Texture2D" uid="uid://bw3n7mxq5lowh" path="res://assets/Bulb.png" id="13_3j2bn"]
[ext_resource type="Texture2D" uid="uid://17jqlok0lmgp" path="res://assets/LitBulb-Sheet.png" id="14_lolfx"]

[sub_resource type="LabelSettings" id="LabelSettings_j18pg"]
font = ExtResource("12_orjhg")
font_size = 32

[sub_resource type="AtlasTexture" id="AtlasTexture_qf2ju"]
atlas = ExtResource("14_lolfx")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hk3ny"]
atlas = ExtResource("14_lolfx")
region = Rect2(64, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_y12jq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_3j2bn")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qf2ju")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hk3ny")
}],
"loop": true,
"name": &"lit",
"speed": 5.0
}]

[node name="Level5" type="Node" node_paths=PackedStringArray("end")]
script = ExtResource("1_j14br")
end = NodePath("BaseBoard/End")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1.27246e-06, 0.204613, 0.00162107, 1)

[node name="BaseBoard" type="Node2D" parent="."]

[node name="End" parent="BaseBoard" instance=ExtResource("2_0y7y4")]
position = Vector2(704, 610)

[node name="Start" parent="BaseBoard" instance=ExtResource("3_gruok")]
position = Vector2(576, 610)

[node name="BoardSpaceList" type="Node2D" parent="BaseBoard"]

[node name="BoardSpace2" parent="BaseBoard/BoardSpaceList" instance=ExtResource("4_h717f")]
position = Vector2(320, 610)
texture = ExtResource("5_sfnul")

[node name="BoardSpace4" parent="BaseBoard/BoardSpaceList" instance=ExtResource("4_h717f")]
position = Vector2(960, 610)
rotation = -1.5708
texture = ExtResource("5_sfnul")

[node name="BoardSpace5" parent="BaseBoard/BoardSpaceList" instance=ExtResource("4_h717f")]
position = Vector2(448, 482)

[node name="BoardSpace6" parent="BaseBoard/BoardSpaceList" instance=ExtResource("4_h717f")]
position = Vector2(320, 482)
rotation = 1.5708
texture = ExtResource("6_fea5r")

[node name="BoardSpace7" parent="BaseBoard/BoardSpaceList" instance=ExtResource("4_h717f")]
position = Vector2(832, 482)

[node name="BoardSpace8" parent="BaseBoard/BoardSpaceList" instance=ExtResource("4_h717f")]
position = Vector2(960, 482)
rotation = -1.5708
texture = ExtResource("6_fea5r")

[node name="BoardSpace23" parent="BaseBoard/BoardSpaceList" instance=ExtResource("4_h717f")]
position = Vector2(448, 354)
rotation = 3.14159
texture = ExtResource("6_fea5r")

[node name="BoardSpace25" parent="BaseBoard/BoardSpaceList" instance=ExtResource("4_h717f")]
position = Vector2(320, 354)
rotation = 1.5708
texture = ExtResource("5_sfnul")

[node name="BoardSpace24" parent="BaseBoard/BoardSpaceList" instance=ExtResource("4_h717f")]
position = Vector2(576, 354)
texture = ExtResource("6_fea5r")

[node name="BoardSpace26" parent="BaseBoard/BoardSpaceList" instance=ExtResource("4_h717f")]
position = Vector2(832, 354)
rotation = 3.14159
texture = ExtResource("6_fea5r")

[node name="BoardSpace28" parent="BaseBoard/BoardSpaceList" instance=ExtResource("4_h717f")]
position = Vector2(960, 354)
rotation = 3.14159
texture = ExtResource("5_sfnul")

[node name="BoardSpace27" parent="BaseBoard/BoardSpaceList" instance=ExtResource("4_h717f")]
position = Vector2(704, 354)
texture = ExtResource("7_sfnul")

[node name="ImmobileTPiece" parent="BaseBoard/BoardSpaceList" instance=ExtResource("5_0y7y4")]
position = Vector2(832, 610)
rotation = 1.5708

[node name="ImmobileTPiece2" parent="BaseBoard/BoardSpaceList" instance=ExtResource("5_0y7y4")]
position = Vector2(448, 610)
rotation = 1.5708

[node name="SideObjective" parent="BaseBoard/BoardSpaceList" instance=ExtResource("6_gruok")]
position = Vector2(576, 228)

[node name="SideObjective2" parent="BaseBoard/BoardSpaceList" instance=ExtResource("6_gruok")]
position = Vector2(576, 482)
rotation = 1.5708

[node name="SideObjective3" parent="BaseBoard/BoardSpaceList" instance=ExtResource("6_gruok")]
position = Vector2(704, 482)
rotation = -1.5708

[node name="PipeSpawner" parent="BaseBoard" instance=ExtResource("5_l8eod")]
position = Vector2(35, 650)
num_pieces = 4

[node name="TurnSpawner" parent="BaseBoard" instance=ExtResource("5_l8eod")]
position = Vector2(35, 550)
piece = ExtResource("6_sfnul")
num_pieces = 6
sprite = ExtResource("7_fea5r")

[node name="TSpawner" parent="BaseBoard" instance=ExtResource("5_l8eod")]
position = Vector2(35, 450)
piece = ExtResource("8_vm1kt")
num_pieces = 2
sprite = ExtResource("9_wnnhf")

[node name="CrossSpawner" parent="BaseBoard" instance=ExtResource("5_l8eod")]
position = Vector2(35, 350)
piece = ExtResource("10_ahsud")
num_pieces = 2
sprite = ExtResource("11_iu1q5")

[node name="Level_Complete" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Level_Complete"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.313726, 0.313726, 0.313726, 0.619608)

[node name="HBoxContainer" type="HBoxContainer" parent="Level_Complete"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -250.0
offset_right = 150.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Level_Complete/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
color = Color(0.756863, 0.447059, 0.0784314, 1)

[node name="MarginContainer" type="MarginContainer" parent="Level_Complete/HBoxContainer/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ColorRect" type="ColorRect" parent="Level_Complete/HBoxContainer/ColorRect/MarginContainer"]
layout_mode = 2
color = Color(0.831373, 0.733333, 0.482353, 1)

[node name="Label" type="Label" parent="Level_Complete/HBoxContainer/ColorRect/MarginContainer/ColorRect"]
texture_filter = 5
layout_mode = 2
offset_left = 76.0
offset_top = 56.0
offset_right = 212.0
offset_bottom = 100.0
text = "You Win!"
label_settings = SubResource("LabelSettings_j18pg")

[node name="Bulb1" type="AnimatedSprite2D" parent="Level_Complete/HBoxContainer/ColorRect/MarginContainer/ColorRect"]
texture_filter = 1
position = Vector2(68, 176)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_y12jq")

[node name="Bulb2" type="AnimatedSprite2D" parent="Level_Complete/HBoxContainer/ColorRect/MarginContainer/ColorRect"]
texture_filter = 1
position = Vector2(140, 176)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_y12jq")
frame_progress = 0.546608

[node name="Bulb3" type="AnimatedSprite2D" parent="Level_Complete/HBoxContainer/ColorRect/MarginContainer/ColorRect"]
texture_filter = 1
position = Vector2(212, 176)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_y12jq")
frame_progress = 0.546608

[node name="NextLevel" type="Button" parent="Level_Complete/HBoxContainer/ColorRect/MarginContainer/ColorRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -180.0
offset_right = 45.0
offset_bottom = -149.0
grow_horizontal = 2
grow_vertical = 0
text = "Next Level"

[node name="Retry" type="Button" parent="Level_Complete/HBoxContainer/ColorRect/MarginContainer/ColorRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -130.0
offset_right = 48.0
offset_bottom = -99.0
grow_horizontal = 2
grow_vertical = 0
text = "Retry"

[node name="MainMenu" type="Button" parent="Level_Complete/HBoxContainer/ColorRect/MarginContainer/ColorRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -80.0
offset_right = 48.0
offset_bottom = -49.0
grow_horizontal = 2
grow_vertical = 0
text = "Main Menu"

[node name="Button" type="Button" parent="."]
offset_left = 1095.0
offset_top = 644.0
offset_right = 1223.0
offset_bottom = 675.0
text = "Check Solution!"

[connection signal="pressed" from="Level_Complete/HBoxContainer/ColorRect/MarginContainer/ColorRect/NextLevel" to="." method="_on_next_level_pressed"]
[connection signal="pressed" from="Level_Complete/HBoxContainer/ColorRect/MarginContainer/ColorRect/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="Level_Complete/HBoxContainer/ColorRect/MarginContainer/ColorRect/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="Button" to="BaseBoard/Start" method="_on_button_pressed"]
